[package]
name = "qhub"
version = "0.1.0"
authors = ["adsick"]
edition = "2018"
description = "a normal social network"
repository = "https://github.com/adsick/qhub"

[dependencies]
rocket = {path = "../Rocket/core/lib"}
rocket_contrib = {path = "../Rocket/contrib/lib"}
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

rand = "0.8"